--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Lab 2</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+  <link rel="stylesheet" media="screen" href="css/reset.css" />
+  <link rel="stylesheet" media="screen" href="css/screen.css" />
+</head>
+<body>
+  <h1>How to be a Millionare</h1>
+  <h3>Please Submit this form for a chance to Win!!!</h3>
+<form> 
+  <ul>
+   <li>
+    <label for="FName">Name: </label><br>
+    <input type="text" id="FName" name="FName"><br>
+   </li> 
+   <li>
+    <label for="email">Email: </label><br>
+    <input type="text" id="email" name="emaill"><br>
+   </li>
+   <li>
+    <label for="date">Date of Birth: </label><br>
+    <input type="date" id="date" name="date"><br>
+   </li>
+   <li>
+    <label for="PN">Phone Number: </label><br>
+    <input type="text" id="PN" name="PN"><br>
+   </li>
+   <li>
+    <button type="button" onclick="alert('Thank you for submitting this form')">Submit</button>
+   </li>
+  </ul>
+</form>
+</body>
+</html>
